--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <title>花少音频声卡教程网</title>
 </head>
                             <h1><li><a href="">花少音频视频声卡教程网 </a></li></h1>
+<h1>图片区：<a href="https://yimaoge.github.io/">点击这里</a></p>
+ </h1
 	<hr />
     <h3><li><a href="">欢迎您</a></li></h3>
+
     
     <style>
         body
