--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ li a:hover:not(.active) {
 </style>
 </head>
 <body>
-<h1>联系我们邮箱留言：<a href="https://mail.qq.com/cgi-bin/frame_html?sid=hvwkagqvw0XVizpd&r=1e032fabda8b0bddabd1c0ee9fce28e8">点击这里</a>我们QQ邮箱地址：2978373754@qq.com</p>
+<h1>邮箱留言：<a href="https://mail.qq.com/cgi-bin/frame_html?sid=hvwkagqvw0XVizpd&r=1e032fabda8b0bddabd1c0ee9fce28e8">点击这里</a></p>
  </h1>
 	<hr />
 <body>
