--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ li a:hover:not(.active) {
 </style>
 </head>
 <body>
-<h1>邮箱留言：<a href="https://mail.qq.com/cgi-bin/frame_html?sid=hvwkagqvw0XVizpd&r=1e032fabda8b0bddabd1c0ee9fce28e8">点击这里</a></p>
+<h1>联系我们邮箱留言：<a href="https://mail.qq.com/cgi-bin/frame_html?sid=hvwkagqvw0XVizpd&r=1e032fabda8b0bddabd1c0ee9fce28e8">点击这里</a>我们QQ邮箱地址：2978373754@qq.com</p>
  </h1>
 	<hr />
 <body>
@@ -97,6 +97,14 @@ li a:hover:not(.active) {
 	<hr />
  <video width="1240" height="640" controls>
   <source src="video/做好人声混响 必须要看的内容!.mp4" type="video/mp4">
+  
+  您的浏览器不支持 HTML5 video 标签。
+</video>
+<body>
+<h1>（第六节）做好人声混响 必须要看的内容! </h1>
+	<hr />
+ <video width="1240" height="640" controls>
+  <source src="video/直播唱歌机架自己做它不香吗！.mp4" type="video/mp4">
   
   您的浏览器不支持 HTML5 video 标签。
 </video>
