--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ li a:hover:not(.active) {
   您的浏览器不支持 HTML5 video 标签。
 </video>
 <body>
-<h1>（第六节）做好人声混响 必须要看的内容! </h1>
+<h1>（第六节）直播唱歌机架自己做它不香吗！ </h1>
 	<hr />
  <video width="1240" height="640" controls>
   <source src="video/直播唱歌机架自己做它不香吗！.mp4" type="video/mp4">
@@ -111,3 +111,4 @@ li a:hover:not(.active) {
 <body>
 
 </html>
+
